fix vote animations on firefox

--- a/animations.less
+++ b/animations.less
@@ -2,14 +2,12 @@
 @import (reference) "test";
 
 .animStatus() {
-  visibility: visible;
+  visibility: visible !important;
   width: 50px;
   height: 150px;
-  //  margin-top: -500px;
   top: -130px; //125 -5
   left: -17px; //15 -2
   z-index: 999999 !important;
-  //background: @sprite 0 -425px !important;
 }
 
 @keyframes thunderbolt {
@@ -71,7 +69,7 @@
   85% {
     opacity: 1;
   }
-  100% {
+  99.999%, 100% {
     opacity: 0;
     width: 44px;
     height: 58px;
@@ -79,6 +77,14 @@
     top: @height;
     left: 6px;
     visibility: visible;
+  }
+  100% {
+    opacity: 1;
+    background: @defaultDownvote;
+    width: 15px;
+    height: 14px;
+    left: 0;
+    top: 0;
   }
 
 }
